Fix drink header not moving during neutral layout (ie no media query) (...) - Bring drink name header to top of z-index when mousing over drink, so it is readable at all lengths (some long names sometimes caused the text to go slightly underneath nearby sibling drinks).

--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,8 @@ footer {
     transform: scale(1.05) translateX(-1.4rem);
   }
   .drink:hover h3 {
-    left: 2rem;
+    left: 3rem;
+    z-index: 1;
   }
 
 .drink.viewing::before {
